overflow issue fixed

--- a/notes/frontend/src/index.css
+++ b/notes/frontend/src/index.css
@@ -150,7 +150,7 @@ body {
   width: 100%;
   height: 100vh;
   background-color: var(--primary-background);
-  /* overflow: hidden; */
+  overflow: hidden;
 }
 
 ol,
